--- a/index.html
+++ b/index.html
@@ -455,25 +455,14 @@
         <div class="Registro">
           <p>Regístrate en nuestra newsletter para estar al tanto!</p>
           <form action="registro" method="post">
-            <label for="nombre">Nombre completo:</label>
-            <input
-              type="text"
-              id="nombre"
-              name="nombre"
-              placeholder="Nombre completo"
-              required
-            />
-
-            <label for="email">Correo electrónico:</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Correo electrónico"
-              required
-            />
-
-            <input class="button" type="submit" value="Registrarse" />
+            <div class="row">
+              <span>
+                <input class="clean-slide" id="name" type="text" placeholder="Nombre" /><label for="name"></label>
+              </span>
+              <span>
+                <input class="clean-slide" id="email" type="text" placeholder="Email" /><label for="email"></label>
+              </span>
+              <input class="button" type="submit" value="Registrarse" />
           </form>
         </div>
       </div>
