Fin del proyecto

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         </ol>
       </section>
       <h3>El futuro</h3>
-      <p>
+      <div class="cierre"><p>
         Es difícil imaginar qué será lo próximo. No estoy seguro de si es
         posible poner más Air en una zapatilla en este momento, pero estoy
         seguro de que Nike encontrará una manera.
@@ -437,7 +437,7 @@
         combinó rendimiento y diseño estilizado, estableciendo nuevos estándares
         en la industria y dejando una influencia duradera en la cultura de las
         zapatillas.
-      </p>
+      </p></div>
 
       <section class="iframe_section">
         <div class="iframe_div">
