mejora de estilos y ajustes en la estructura del HTML

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="Air Max, zapatillas, moda, cultura, diseño, influencia, hip-hop, historia"
     />
     <link rel="icon" href="./images/favicon-16x16.png" type="image/png" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="styles.css">
     <title>Historia de las Air Max: diseño, cultura y moda</title>
   </head>
 
